examples/datalog/25_unified_prefix/03_mixed_session_persistent.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_mixed
Knowledge graph 'test_mixed' created.
Switched to knowledge graph: test_mixed
> .kg use test_mixed
Switched to knowledge graph: test_mixed
> +base[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'base'.
> +doubled(X, Y) :- base(X), Y = X * 2.
Script error: Failed to register rule: Unsafe rule 'doubled': Head variable(s) Y not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
