examples/datalog/25_unified_prefix/03_mixed_session_persistent.dl
% Test: Mixed session and persistent rules
% Expected: Session and persistent rules coexist
% Category: 25_unified_prefix
% Priority: P2 - Rule management

.kg create test_mixed
.kg use test_mixed

+base[(1,), (2,), (3,)].

% Persistent rule
+doubled(X, Y) :- base(X), Y = X * 2.

% Session rule
tripled(X, Y) :- base(X), Y = X * 3.

?- doubled(X, Y).

?- tripled(X, Y).

.rule

.kg use default
.kg drop test_mixed
